--- a/nosotros.html
+++ b/nosotros.html
@@ -76,7 +76,7 @@ en realidad. </p>
 </td></tr>
 <tr>
 <td  >
-<img src="fts/nosotros4.jpg" class="hola4" align="center"> 
+<img src="imagenes/nosotros4.jpg" class="hola4" align="center"> 
 </td>
 </tr>
 </table>
