--- a/nosotros.html
+++ b/nosotros.html
@@ -1,9 +1,7 @@
 <html>
 <head> 
-<title>LOHSO.com</title>
+<title>kickz4you.com</title>
 <link rel="stylesheet" href="nosotros.css">
-<link rel="stylesheet" href="">
-<link rel="stylesheet" href="">
 </head>
 <body>
 
