--- a/nosotros.html
+++ b/nosotros.html
@@ -1,6 +1,8 @@
 <html>
-<head> 
-<title>kickz4you.com</title>
+<head>
+<title>
+kickz4you.com
+</title>
 <link rel="stylesheet" href="nosotros.css">
 </head>
 <body>
