--- a/camisetahombre.html
+++ b/camisetahombre.html
@@ -56,7 +56,7 @@ kickz4you.com
 <a href="camisetachico1.html"><div class="polaroid">
   <img src="camiseta5.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica negra<br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
