--- a/joyeria.html
+++ b/joyeria.html
@@ -45,11 +45,11 @@ kickz4you.com
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
-<h1>Best sellers</h1>
+<h1>Joyería</h1>
 <table BORDER=0 WIDTH=90%  cellpadding=10 CELLSPACING=10 align="center">
 <tr>
 <td>
