--- a/gorros.html
+++ b/gorros.html
@@ -45,7 +45,7 @@ kickz4you.com
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="nosostros.html"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
