--- a/camisetahombre.html
+++ b/camisetahombre.html
@@ -56,7 +56,7 @@ kickz4you.com
 <a href="camisetachico1.html"><div class="polaroid">
   <img src="camiseta5.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta básica negra<br><b>9,5€</br></p>
+    <p>Camiseta básica<br><b>9,45€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="camiseta12.html"><div class="polaroid">
   <img src="camiseta12.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica con logo<br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="camisetachico2.html"><div class="polaroid">
   <img src="camiseta6.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta con estampado <br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="camisetachico4.html"><div class="polaroid">
   <img src="camiseta8.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta manga larga con estampado <br><b>14,55€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="camiseta11.html"><div class="polaroid">
   <img src="camiseta11.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta con estampado <br><b>12,99€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="camiseta9.html"><div class="polaroid">
   <img src="camiseta9.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica <br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="camisetachico3.html"><div class="polaroid">
   <img src="camiseta7.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica  <br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="camiseta10.html"><div class="polaroid">
   <img src="camiseta10.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica <br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
@@ -138,7 +138,7 @@ kickz4you.com
 <a href="camiseta13.html"><div class="polaroid">
   <img src="camiseta13.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p> Camiseta básica con logo<br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="camiseta14.html"><div class="polaroid">
   <img src="camiseta14.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="camiseta15.html"><div class="polaroid">
   <img src="camiseta15.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta sin mangas <br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="camiseta16.html"><div class="polaroid">
   <img src="camiseta16.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica con logo <br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="camiseta17.html"><div class="polaroid">
   <img src="camiseta17.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="camiseta18.html"><div class="polaroid">
   <img src="camiseta18.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="camiseta19.html"><div class="polaroid">
   <img src="camiseta19.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica <br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="camiseta20.html"><div class="polaroid">
   <img src="camiseta20.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>9,5€</br></p>
 	 
   </div>
 </div></a>
