--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
   
 </ul></div>
