--- a/camisetahombre.html
+++ b/camisetahombre.html
@@ -49,7 +49,7 @@ kickz4you.com
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
-<h1>Best sellers</h1>
+<h1>Camisetas hombre</h1>
 <table BORDER=0 WIDTH=90%  cellpadding=10 CELLSPACING=10 align="center">
 <tr>
 <td>
@@ -138,7 +138,7 @@ kickz4you.com
 <a href="camiseta13.html"><div class="polaroid">
   <img src="camiseta13.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p> Camiseta básica con logo<br><b>9,5€</br></p>
+    <p> Camiseta básica con logo<br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="camiseta14.html"><div class="polaroid">
   <img src="camiseta14.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta manga larga <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>14,55€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="camiseta15.html"><div class="polaroid">
   <img src="camiseta15.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta sin mangas <br><b>9,5€</br></p>
+    <p>Camiseta sin mangas <br><b>8,55€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="camiseta16.html"><div class="polaroid">
   <img src="camiseta16.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta básica con logo <br><b>9,5€</br></p>
+    <p>Camiseta básica con logo <br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="camiseta17.html"><div class="polaroid">
   <img src="camiseta17.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta manga larga <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>15,99€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="camiseta18.html"><div class="polaroid">
   <img src="camiseta18.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta manga larga <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>14,55€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="camiseta19.html"><div class="polaroid">
   <img src="camiseta19.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta básica <br><b>9,5€</br></p>
+    <p>Camiseta básica <br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="camiseta20.html"><div class="polaroid">
   <img src="camiseta20.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Camiseta manga larga <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>14,55€</br></p>
 	 
   </div>
 </div></a>
