--- a/pantalones1.html
+++ b/pantalones1.html
@@ -56,7 +56,7 @@ kickz4you.com
 <a href="pantalones1uno.html"><div class="polaroid">
   <img src="pantalones1.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p> Chandal gris <br><b>14,99€</br></p>
+    <p> Chandal morado <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="pantalones2.html"><div class="polaroid">
   <img src="pantalones2.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones tubo negros<br><b>19,99€</br></p>
+    <p>Chandal nubes multicolor<br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="pantalones31.html"><div class="polaroid">
   <img src="pantalones31.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones de traje negros high <br><b>21,99€</br></p>
 	 
   </div>
 </div>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="pantalones32.html"><div class="polaroid">
   <img src="pantalones32.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones casual tubo beis <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="pantalones5.html"><div class="polaroid">
   <img src="pantalones5.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal gris <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="pantalones6.html"><div class="polaroid">
   <img src="pantalones6.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal anime negro <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="pantalones7.html"><div class="polaroid">
   <img src="pantalones7.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cargo verdes <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="pantalones8.html"><div class="polaroid">
   <img src="pantalones8.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cortos rosas <br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
