--- a/camisetachico1.html
+++ b/camisetachico1.html
@@ -56,10 +56,10 @@
 <img class="camiseta1" src="camiseta5.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 9,45€ </h1>
 <h1> Descripción del producto </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	blanco</p>
+<p>Color:	Negro</p>
 <p>Tipo de Estampado:	ninguno</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
