--- a/camisetachico2.html
+++ b/camisetachico2.html
@@ -56,10 +56,10 @@
 <img class="camiseta1" src="camiseta6.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 9,99€ </h1>
 <h1> Descripción del producto </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	negro</p>
+<p>Color:	Violeta</p>
 <p>Tipo de Estampado:	no hay</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
