--- a/Páginas html y css/camisetamujer.html
+++ b/Páginas html y css/camisetamujer.html
@@ -56,7 +56,7 @@ kickz4you.com
 <a href="camiseta27.html"><div class="polaroid">
   <img src="camiseta27.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top de manga larga <br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="camiseta25.html"><div class="polaroid">
   <img src="camiseta25.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top ajustado de manga larga <br><b>10,55€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="camisetachica3.html"><div class="polaroid">
   <img src="camiseta3.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta oversize <br><b>8,55€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="camiseta22.html"><div class="polaroid">
   <img src="camiseta22.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top con estampado de leopardo <br><b>12,55€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="camiseta21.html"><div class="polaroid">
   <img src="camiseta21.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top ajustado de manga larga <br><b>12,55€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="camisetachica4.html"><div class="polaroid">
   <img src="camiseta4.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top corto de manga larga <br><b>10,55€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="camiseta23.html"><div class="polaroid">
   <img src="camiseta23.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p> Top de brillantes<br><b>12,55€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="camiseta24.html"><div class="polaroid">
   <img src="camiseta24.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta manga larga <br><b>10,55€</br></p>
 	 
   </div>
 </div></a>
@@ -138,7 +138,7 @@ kickz4you.com
 <a href="camisetachica2.html"><div class="polaroid">
   <img src="camiseta2.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top corto con trasparencias <br><b>14,80€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="camiseta26.html"><div class="polaroid">
   <img src="camiseta26.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Body de manga larga <br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="camisetachica1.html"><div class="polaroid">
   <img src="camiseta1.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta ajustada <br><b>10,25€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="camiseta28.html"><div class="polaroid">
   <img src="camiseta28.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top corto de cuadros <br><b>13,55€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="camiseta29.html"><div class="polaroid">
   <img src="camiseta29.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Body ajustado con cremallera <br><b>9,45€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="camiseta30.html"><div class="polaroid">
   <img src="camiseta30.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top de manga larga con estampado <br><b>17,95€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="camiseta31.html"><div class="polaroid">
   <img src="camiseta31.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top corto de tirantes color rosa <br><b>7,55€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="camiseta32.html"><div class="polaroid">
   <img src="camiseta32.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top corto de tirante color negro <br><b>7,55€</br></p>
 	 
   </div>
 </div></a>
