--- a/Páginas html y css/camisetamujer.html
+++ b/Páginas html y css/camisetamujer.html
@@ -49,7 +49,7 @@ kickz4you.com
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
-<h1>Best sellers</h1>
+<h1>Camisetas mujer</h1>
 <table BORDER=0 WIDTH=90%  cellpadding=10 CELLSPACING=10 align="center">
 <tr>
 <td>
