--- a/pantalones1.html
+++ b/pantalones1.html
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="pantalones31.html"><div class="polaroid">
   <img src="pantalones31.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones de traje negros high <br><b>21,99€</br></p>
+    <p>Pantalon de traje negro high <br><b>21,99€</br></p>
 	 
   </div>
 </div>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="pantalones7.html"><div class="polaroid">
   <img src="pantalones7.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones cargo verdes <br><b>19,99€</br></p>
+    <p>Pantalon cargo verde <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="pantalones8.html"><div class="polaroid">
   <img src="pantalones8.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones cortos rosas <br><b>11,99€</br></p>
+    <p>Pantalon corto rosa <br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
