--- a/pantaloneshombre.html
+++ b/pantaloneshombre.html
@@ -56,7 +56,7 @@ kickz4you.com
 <a href="pantalones5.html"><div class="polaroid">
   <img src="pantalones5.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal gris <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="pantalones9.html"><div class="polaroid">
   <img src="pantalones9.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones tubo negros <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="pantalones6.html"><div class="polaroid">
   <img src="pantalones6.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal anime negro <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="pantalones10.html"><div class="polaroid">
   <img src="pantalones10.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal casual beis <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="pantalones11.html"><div class="polaroid">
   <img src="pantalones11.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones de cuadros negros <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="pantalones12.html"><div class="polaroid">
   <img src="pantalones12.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cargo negros <br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="pantalones7.html"><div class="polaroid">
   <img src="pantalones7.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cargo verdes<br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="pantalones8.html"><div class="polaroid">
   <img src="pantalones8.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cortos rosa<br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="pantalones14.html"><div class="polaroid">
   <img src="pantalones14.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones bolsa negros <br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="pantalones15.html"><div class="polaroid">
   <img src="pantalones15.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones silk blancos <br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="pantalones16.html"><div class="polaroid">
   <img src="pantalones16.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cargo bolsa negros <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="pantalones17.html"><div class="polaroid">
   <img src="pantalones17.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones traje negros <br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="pantalones18.html"><div class="polaroid">
   <img src="pantalones18.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Vaqueros grandes low oscuros <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="pantalones19.html"><div class="polaroid">
   <img src="pantalones19.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Vaqueros negros ajustados <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="pantalones20.html"><div class="polaroid">
   <img src="pantalones20.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Vaqueros azules ajustados <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
