--- a/pantaloneshombre.html
+++ b/pantaloneshombre.html
@@ -138,7 +138,7 @@ kickz4you.com
 <a href="pantalones13.html"><div class="polaroid">
   <img src="pantalones13.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones bolsa negros <br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="pantalones14.html"><div class="polaroid">
   <img src="pantalones14.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones bolsa negros <br><b>11,99€</br></p>
+    <p>Pantalones silk blancos  <br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="pantalones15.html"><div class="polaroid">
   <img src="pantalones15.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones silk blancos <br><b>21,99€</br></p>
+    <p>Pantalones cargo bolsa negros <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="pantalones16.html"><div class="polaroid">
   <img src="pantalones16.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones cargo bolsa negros <br><b>19,99€</br></p>
+    <p>Pantalones traje negros <br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="pantalones17.html"><div class="polaroid">
   <img src="pantalones17.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones traje negros <br><b>21,99€</br></p>
+    <p>Vaqueros grandes low oscuros<br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="pantalones18.html"><div class="polaroid">
   <img src="pantalones18.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Vaqueros grandes low oscuros <br><b>14,99€</br></p>
+    <p>Vaqueros negros ajustados<br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="pantalones19.html"><div class="polaroid">
   <img src="pantalones19.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Vaqueros negros ajustados <br><b>14,99€</br></p>
+    <p>Vaqueros azules ajustados <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="pantalones20.html"><div class="polaroid">
   <img src="pantalones20.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Vaqueros azules ajustados <br><b>14,99€</br></p>
+    <p>Vaqueros azules grandes <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
