--- a/soporte2.html
+++ b/soporte2.html
@@ -338,7 +338,7 @@ function validateForm() {
  <h3>¿En qué podemos ayudarte?:</h3> <input class="form" type="text" name="fname4" required title="Describanos su problema ">
  <br>
  <br>
-  <a href="soporte3.html"><input  type="submit" value="Enviar cuestionario" class="submit" title="Enviar cuestionario"></a>
+ <input  type="submit" value="Enviar cuestionario" class="submit" title="Enviar cuestionario">
 </form>
 <p id="demo"> </p>
 
