--- a/pantalonesmujer.html
+++ b/pantalonesmujer.html
@@ -56,7 +56,7 @@ kickz4you.com
 <a href="pantalones1uno.html"><div class="polaroid">
   <img src="pantalones1.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal morado <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="pantalones21.html"><div class="polaroid">
   <img src="pantalones21.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal rojo Brooklyn<br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="pantalones22.html"><div class="polaroid">
   <img src="pantalones22.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones vaqueros oscuros <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="pantalones2.html"><div class="polaroid">
   <img src="pantalones2.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal nubes multicolor <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="pantalones3.html"><div class="polaroid">
   <img src="pantalones3.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones causal mikey mouse <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="pantalones23.html"><div class="polaroid">
   <img src="pantalones23.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones vaqueros verdes low <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="pantalones4.html"><div class="polaroid">
   <img src="pantalones4.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones causal beis <br><b>17,99€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="pantalones24.html"><div class="polaroid">
   <img src="pantalones24.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones vaqueros azules ajustados <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -138,7 +138,7 @@ kickz4you.com
 <a href="pantalones25.html"><div class="polaroid">
   <img src="pantalones25.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Chandal negro angel<br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="pantalones26.html"><div class="polaroid">
   <img src="pantalones26.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones brillantes con abertura<br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="pantalones27.html"><div class="polaroid">
   <img src="pantalones27.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones silk apretdos negros <br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="pantalones28.html"><div class="polaroid">
   <img src="pantalones28.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cuadros clasic <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="pantalones29.html"><div class="polaroid">
   <img src="pantalones29.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cargo high verdes <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="pantalones30.html"><div class="polaroid">
   <img src="pantalones30.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones cargo de rallas <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="pantalones31.html"><div class="polaroid">
   <img src="pantalones31.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones de traje negros high <br><b>21,99€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="pantalones32.html"><div class="polaroid">
   <img src="pantalones32.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Pantalones casual tubo beis<br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
