--- a/pantaloneshombre.html
+++ b/pantaloneshombre.html
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="pantalones10.html"><div class="polaroid">
   <img src="pantalones10.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Chandal casual beis <br><b>14,99€</br></p>
+    <p>Chandal casual beige <br><b>14,99€</br></p>
 	 
   </div>
 </div></a>
