--- a/pantalonesmujer.html
+++ b/pantalonesmujer.html
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="pantalones4.html"><div class="polaroid">
   <img src="pantalones4.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones causal beis <br><b>17,99€</br></p>
+    <p>Pantalones causal beige <br><b>17,99€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="pantalones32.html"><div class="polaroid">
   <img src="pantalones32.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones casual tubo beis<br><b>19,99€</br></p>
+    <p>Pantalones casual tubo beige<br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
