--- a/pantalones1.html
+++ b/pantalones1.html
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="pantalones32.html"><div class="polaroid">
   <img src="pantalones32.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Pantalones casual tubo beis <br><b>19,99€</br></p>
+    <p>Pantalones casual tubo beige <br><b>19,99€</br></p>
 	 
   </div>
 </div></a>
