--- a/zapatillashombre.html
+++ b/zapatillashombre.html
@@ -49,14 +49,14 @@ kickz4you.com
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
-<h1>Best sellers</h1>
+<h1>Más popular</h1>
 <table BORDER=0 WIDTH=90%  cellpadding=10 CELLSPACING=10 align="center">
 <tr>
 <td>
 <a href="zapatilla11.html"><div class="polaroid">
   <img src="zapatillas11.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas sport multicolor <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="zapatilla7.html"><div class="polaroid">
   <img src="zapatillas7.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual blancas high <br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="zapatilla6.html"><div class="polaroid">
   <img src="zapatillas6.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual marrones <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="zapatilla10.html"><div class="polaroid">
   <img src="zapatillas10.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas sport negras <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="zapatilla5.html"><div class="polaroid">
   <img src="zapatillas5.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual multicolor <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="zapatilla12.html"><div class="polaroid">
   <img src="zapatillas12.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas negrass yeezy type <br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="zapatilla9.html"><div class="polaroid">
   <img src="zapatillas9.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas sport blancas smiley <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="zapatilla8.html"><div class="polaroid">
   <img src="zapatillas8.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas blancas balenciaga type <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -138,7 +138,7 @@ kickz4you.com
 <a href="zapatilla13.html"><div class="polaroid">
   <img src="zapatillas13.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual blancas estampado <br><b>25€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="zapatilla14.html"><div class="polaroid">
   <img src="zapatillas14.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual high negras <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="zapatilla15.html"><div class="polaroid">
   <img src="zapatillas15.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual stan smith <br><b>25€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="zapatilla16.html"><div class="polaroid">
   <img src="zapatillas16.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual 3 colores<br><b>25€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="zapatilla17.html"><div class="polaroid">
   <img src="zapatillas17.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas suela de aire negras <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="zapatilla18.html"><div class="polaroid">
   <img src="zapatillas18.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas suela sport negras <br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="zapatilla19.html"><div class="polaroid">
   <img src="zapatillas19.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas clasic nergras<br><b>20€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="zapatilla20.html"><div class="polaroid">
   <img src="zapatillas20.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas sport tela <br><b>25€</br></p>
 	 
   </div>
 </div></a>
